internal/controller/testdata/expected/full/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels: {}
  annotations:
    uptime.pdok.nl/id: 92dcf547053bcfd16136aba36f3ddddf13cd07f7
    uptime.pdok.nl/name: test title 0.0.0 OGC API
    uptime.pdok.nl/tags: public-stats,ogcapi
    uptime.pdok.nl/url: https://my.test-resource.test/ogc/path/health
  name: test-resource
  namespace: default
  ownerReferences:
  - apiVersion: pdok.nl/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: OGCAPI
    name: test-resource
    uid: ""
spec:
  routes:
  - kind: Rule
    match: (Host(`localhost`) || Host(`my.test-resource.test`)) && PathRegexp(`^/ogc/path(/|$)`)
    middlewares:
    - name: test-resource-strip-prefix
      namespace: default
    - name: test-resource-cors-headers
      namespace: default
    services:
    - kind: Service
      name: test-resource
      port: main
    syntax: v3
  - kind: Rule
    match: (Host(`localhost`) || Host(`my.test-resource.test`)) && PathRegexp(`^/ogc/other(/|$)`)
    middlewares:
    - name: test-resource-strip-prefix
      namespace: default
    - name: test-resource-cors-headers
      namespace: default
    services:
    - kind: Service
      name: test-resource
      port: main
    syntax: v3
